# RlMarket

./: CMakeLists.txt  README.md  main.cpp
config/: config.yaml
data/md/000661.SZ/: md_20200226.csv
data/tas/000661.SZ/: tas_20200226.csv
include/environment/: base.h  intraday.h
include/experiment/: serial.h
include/market/: book.h  currency.h  market.h  order.h
include/spdlog/: spdlog.h
include/utilities/: accumulators.h  comparison.h  time.h
output/: config.yaml  model_log.csv  profit_log.csv  test_stats.csv  training_log.csv
output/order_log/: order_log_20200226.csv
src/data/: basic.cpp
src/environment/: base.cpp  intraday.cpp  risk_manager.cpp
src/experiment/: serial.cpp
src/market/: book.cpp  market.cpp  order.cpp
src/rl/: state.cpp
src/utilities/: accumulators.cpp
